--- a/.cdsrc.json
+++ b/.cdsrc.json
@@ -1,7 +1,7 @@
 {
     "requires": {
         "db": {
-            "kind": "sqlite",
+            "kind": "hana",
             "model": [
                 "db",
                 "srv"
@@ -18,7 +18,6 @@
         "version": "v4"
     },
     "build": {
-        "target": ".",
         "tasks": [
             {
                 "for": "node-cf",
